src/assets/css/venue-core.css
/* ... */
.student-attendance-pill .event-info-area .event-name {

}

.student-attendance-pill .event-info-area .event-location {
  color: rgba(0, 0, 0, 0.59);
  font-size: 0.7rem;
}

.history-by-month {
  margin-top: 25px;
}

.history-by-month .month-title {
  margin-bottom: 20px;
}

.instructor-attendance-history-pill {
  border: 2px solid red;
  border-radius: 5px;
  margin-right: 40px;
  margin-bottom: 25px;
  position: relative;
  width: 340px;
  height: 65px;
  cursor: pointer;
  color: #2c3e50;
}

.instructor-attendance-history-pill .date-area {
  width: 20%;
  background-color: red;
  height: 100%;
  text-align: center;
  color: white;
  line-height: 22px;
  margin-right: 15px;
}

.instructor-attendance-history-pill .date-area .day-of-week {
  font-size: 0.8rem;
  margin-top: 5px;
}

.instructor-attendance-history-pill .date-area .day-of-month {
  font-size: 1.3rem;
}

.instructor-attendance-history-pill .name-area {
  width: 55%;
  position: relative;
  top: 5px;
}

.instructor-attendance-history-pill .name-area .event-name {
  font-size: 1rem;
}

.instructor-attendance-history-pill .name-area .event-location {
  font-size: 0.8rem;
  color: rgba(0, 0, 0, 0.7);
  line-height: 15px;
}

.instructor-attendance-history-pill .percentage-area {
  background-color: green;
  float: right;
  height: 100%;
  width: 55px;
  position: relative;
  text-align: center;
  line-height: 55px;
  color: white;
  font-size: 1.2rem;
}

.instructor-attendance-history-pill .percentage-area::before {
  content: '';
  position: absolute;
  border-right: 15px solid green;
  border-bottom: 31px solid green;
  border-top: 31px solid transparent;
  border-left: 15px solid transparent;
  left: -30px;
}


.instructor-attendance-history-pill.good {
  border: 2px solid #24E565;
  box-shadow: 0px 3px 10px rgba(65, 162, 91, 0.33);
}
.instructor-attendance-history-pill.good .date-area {
  background-color: #24E565;
}
.instructor-attendance-history-pill.good .percentage-area {
  background-color: #24E565;
}

.instructor-attendance-history-pill.good .percentage-area::before {
  border-right: 15px solid #24E565;
  border-bottom: 31px solid #24E565;
}

.instructor-attendance-history-pill.medium {
  border: 2px solid #E97E47;
  box-shadow: 0px 3px 10px rgba(233, 126, 71, 0.36);
}
.instructor-attendance-history-pill.medium .date-area {
  background-color: #E97E47;
}
.instructor-attendance-history-pill.medium .percentage-area {
  background-color: #E97E47;
}

.instructor-attendance-history-pill.medium .percentage-area::before {
  border-right: 15px solid #E97E47;
  border-bottom: 31px solid #E97E47;
}


.instructor-attendance-history-pill.bad {
  border: 2px solid rgb(209, 62, 52);
  box-shadow: 0px 3px 10px rgba(255, 99, 88, 0.36);
}
.instructor-attendance-history-pill.bad .date-area {
  background-color: rgb(209, 62, 52);
}
.instructor-attendance-history-pill.bad .percentage-area {
  background-color: rgb(209, 62, 52);
}

.instructor-attendance-history-pill.bad .percentage-area::before {
  border-right: 15px solid rgb(209, 62, 52);
  border-bottom: 31px solid rgb(209, 62, 52);
}

.instructor-attendance .month-area,
.student-attendance .month-area {
  margin-bottom: 20px;
  margin-left: 50px;
  margin-right: 50px;
  margin-top: 20px;
}

.attendance-history-container {
  margin-left: 50px;
  margin-right: 50px;
}

.instructor-attendance .month-area.mobile,
.student-attendance .month-area.mobile {
  margin-left: 0rem;
  margin-right: 0rem;
}

.instructor-attendance .event-pills-area {
  margin-left: 50px;
}

.line-graph {
  height: 400px;
}

.dashboard-section-modal {
  width: 50%;
  min-height: 200px;
  display: inline-block;
  vertical-align: top;
}

.dashboard-section-modal.is-mobile {
  width: 330px;
  margin: 0 auto;
}

.dashboard-section-modal .sub-section {
  margin: 1rem 1rem;
  height: 16.5rem;
  overflow-y: auto;
}

.dashboard-section-modal .sub-section::-webkit-scrollbar {
  width: 12px;
}

.dashboard-section-modal .sub-section::-webkit-scrollbar-thumb {
  border-radius: 10px;
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
  background-color: #F5F5F5; 
}

.dashboard-section-modal .sub-section.is-mobile {
  margin: 0;
}

 .dashboard-section-modal .course-pill {
   width: 450px;
   height: 80px;
   position: relative;
   cursor: pointer;
   margin-bottom: 20px;
 }

  .dashboard-section-modal .course-pill.is-mobile {
    width: 300px;
  }

.dashboard-section-modal .course-pill .foreground-pillar {
  border-radius: 5px;
  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
  position: relative;
  z-index: 3;
  background-color: white;
  height: 100%;
}

.course-pill .background-pillar {
  position: absolute;
  background-color: red;
  left: -1%;
  top: -6%;
  border-radius: 5px;
  width: 102%;
  height: 90%;
  z-index: 1;
  transition: left 0.25s, top 0.25s, width 0.25s;
}

.course-pill:hover .background-pillar {
  top: -8%;
  width: 104%;
  left: -2%;
}

.dashboard-section-modal .course-pill .pill-left,
.dashboard-section-modal .course-pill .pill-right {
  width: 30%;
}

.dashboard-section-modal .course-pill .pill-left {
  text-align: center;
  padding-top: 18px;
}

.dashboard-section-modal .course-pill .pill-left .course-name {
  font-size: 0.8rem;
  font-weight: bold;
  color: #53788E;
}

.dashboard-section-modal .course-pill .pill-left .course-dept {
  font-size: 0.85rem;
  color: #2398C8;
  font-weight: bold;
}

.dashboard-section-modal .course-pill .pill-center {
  width: 40%;
  text-align: center;
}

.dashboard-section-modal .course-pill .pill-center .single-info {
  font-size: 0.95rem;
  position: relative;
  top: 22px;
}

.dashboard-section-modal .course-pill .pill-center .double-info.primary {
  margin-top: 15px;
  font-size: 0.9rem;
}

.dashboard-section-modal .course-pill .pill-center .double-info.secondary {
  font-size: 0.8rem;
}

.dashboard-section-modal .course-pill .pill-right {
  text-align: center;
  font-size: 0.8rem;
  position: relative;
  top: 25px;
}
/* ... */

